--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,10 @@
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  -webkit-tap-highlight-color: transparent;
+}
+
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   background-color: #242424;
@@ -7,13 +14,11 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
-  min-width: 320px;
   min-height: 100vh;
 }
 
 #app {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
 }
