--- a/src/style.css
+++ b/src/style.css
@@ -13,12 +13,12 @@
 body {
   margin: 0;
   display: flex;
-  place-items: center;
+  justify-content: center;
   min-height: 100vh;
 }
 
 #app {
   max-width: 1280px;
-  margin: 0 auto;
+  margin: 10px auto 0 auto;
   text-align: center;
 }
